--- a/course-overview.qmd
+++ b/course-overview.qmd
@@ -2,6 +2,9 @@
 title: "Course overview"
 ---
 
+![](/images/logo.png)
+
+
 Intro to data science and statistical thinking.
 Learn to explore, visualize, and analyze data to understand natural phenomena, investigate patterns, model outcomes, and make predictions, and do so in a reproducible and shareable manner.
 Gain experience in data wrangling and munging, exploratory data analysis, predictive modeling, and data visualization, and effective communication of results.
