--- a/course-overview.qmd
+++ b/course-overview.qmd
@@ -2,7 +2,7 @@
 title: "Course overview"
 ---
 
-![](/images/logo.png)
+![](/images/logo.png){width="50%"}
 
 
 Intro to data science and statistical thinking.
